# upload_rs

./: .gitignore  Cargo.toml  application.yaml  warn.txt
src/: main.rs
src/api/: check_paper_exit.rs  convert_html_to_img.rs  get_request.rs  llm.rs  mod.rs  send_request.rs  submit_paper.rs
src/api/upload/: batch.rs  get_credential.rs  img.rs  mod.rs  pdf.rs
src/app/: browser.rs  logger.rs  mod.rs  models.rs  state.rs  types.rs
src/app/workflow/: mod.rs  pipeline.rs  upload_to_xueke.rs
src/app/workflow/metadata/: data_addr.rs  data_grade.rs  data_paper_type.rs  data_subject.rs  deter_city.rs  deter_misc.rs  mod.rs
src/app/workflow/processors/: catalogue.rs  mod.rs  paper.rs
src/app/workflow/xueke/: download.rs  fetch_paperlist.rs  mod.rs  pipeline.rs
src/app/workflow/xueke/download/: extract_meta.rs  mod.rs  pdf.rs  pipeline.rs  screenshot.rs  scripts.rs  utils.rs
src/config/: mod.rs
