[package]
name = "upload_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.13.1", features = ["json", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures = "0.3"
config = "0.15.19"
rust-s3 = "0.37.1"
rand = "0.9.2"
chromiumoxide = "0.8.0"